Name:                sunroof-compiler
Version:             0.2.2
Synopsis:            Monadic Javascript Compiler
Homepage:            https://github.com/ku-fpg/sunroof-compiler
Bug-reports:         https://github.com/ku-fpg/sunroof-compiler
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Jan Bracker <jbra@informatik.uni-kiel.de>
Maintainer:          Jan Bracker <jbra@informatik.uni-kiel.de>
Copyright:           (c) 2012 The University of Kansas
Category:            Web, Language, Embedded, Compiler, Javascript
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
extra-source-files:  CHANGELOG.md, README.md
Description:
  Monadic Javascript Compiler.

Extra-source-files:
    README.md

Library
  Exposed-modules:     Language.Sunroof
                       Language.Sunroof.Classes
                       Language.Sunroof.Compiler
                       Language.Sunroof.Concurrent
                       Language.Sunroof.Internal
                       Language.Sunroof.JavaScript
                       Language.Sunroof.Selector
                       Language.Sunroof.Types
                       Language.Sunroof.Utils
                       Language.Sunroof.JS.Args
                       Language.Sunroof.JS.Array
                       Language.Sunroof.JS.Bool
                       Language.Sunroof.JS.Browser
                       Language.Sunroof.JS.Canvas
                       Language.Sunroof.JS.Chan
                       Language.Sunroof.JS.Date
                       Language.Sunroof.JS.JQuery
                       Language.Sunroof.JS.Map
                       Language.Sunroof.JS.MVar
                       Language.Sunroof.JS.Number
                       Language.Sunroof.JS.Object
                       Language.Sunroof.JS.Ref
                       Language.Sunroof.JS.String

  default-language:    Haskell2010
  build-depends:       base               >= 4.3.1   && < 5,
                       base-compat        >= 0.8.1   && < 1,
                       Boolean            >= 0.2,
                       containers         >= 0.4,
                       data-default-class >= 0.0.1   && < 0.2,
                       data-reify         >= 0.6,
                       mtl                >= 2.0,
                       operational        >= 0.2.0.3 && < 0.3,
                       scientific         >= 0.3.2   && < 0.4,
                       semigroups         >= 0.9,
                       tagged             >= 0.3,
                       vector-space       >= 0.8.6

  GHC-options: -Wall

source-repository head
  type:     git
  location: git://github.com/ku-fpg/sunroof-compiler.git
