Name:                sunroof
Version:             0.1
Synopsis:            Monadic Javascript Compiler
Homepage:            https://github.com/kufpg/sunroof/
Bug-reports:         https://github.com/kufpg/sunroof/
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) 2012 The University of Kansas
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  Monadic Javascript Compiler

--data-files:
--    static/kansas-comet.js

Extra-source-files:
    README

Library
  Exposed-modules:     Language.Sunroof
                       Language.Sunroof.Compiler
                       Language.Sunroof.Types
--  other-modules:       Paths_kansas-comet
  default-language:    Haskell2010
  build-depends:       aeson            >= 0.5,
                       base             >= 4.3.1 && < 5,
                       Boolean          >= 0.1.0,
                       containers       >= 0.5,
                       data-default     == 0.5.*,
                       kansas-comet,
                       mtl,
                       operational      >= 0.2.0.3 && < 0.3,
                       scotty           >= 0.4.2 && < 0.5,
                       stm              == 2.2.*,
                       transformers     == 0.3.*,
                       text             == 0.11.*

-- text is needed just for scotty's literal

  GHC-options: -Wall -fno-warn-orphans

--source-repository head
--  type:     git
--  location: git://github.com/kufpg/sunroof.git
