Name:                sunroof
Version:             0.1
Synopsis:            Monadic Javascript Compiler
Homepage:            https://github.com/ku-fpg/sunroof/
Bug-reports:         https://github.com/ku-fpg/sunroof/
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>
Maintainer:          Jan Bracker <jbra@informatik.uni-kiel.de>
Copyright:           (c) 2012 The University of Kansas
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  Monadic Javascript Compiler

--data-files:
--    static/kansas-comet.js

Extra-source-files:
    README

Library
  Exposed-modules:     Language.Sunroof
                       Language.Sunroof.Compiler
                       Language.Sunroof.Types
                       Language.Sunroof.Canvas
                       Language.Sunroof.Browser
                       Language.Sunroof.KansasComet
--  other-modules:       Paths_kansas-comet
  default-language:    Haskell2010
  build-depends:       aeson            >= 0.5,
                       attoparsec       >= 0.8.6.1,
                       vector           >= 0.7.1,
                       unordered-containers >= 0.1.3.0,
                       base             >= 4.3.1 && < 5,
                       Boolean          >= 0.1.0,
                       containers       >= 0.4,
                       data-default     == 0.5.*,
                       kansas-comet,
                       wai-middleware-static,
                       mtl,
                       operational      >= 0.2.0.3 && < 0.3,
                       scotty           >= 0.4.2 && < 0.5,
                       warp             >= 1.3.4.1,
                       stm              >= 2.2,
                       transformers     == 0.3.*,
                       text             == 0.11.*,
                       tagged           >= 0.4.4

-- text is needed just for scotty's literal

  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/ku-fpg/sunroof.git
