Name:                tractor
Version:             0.1
Synopsis:            A javascript push mechanism and event listener
Homepage:            https://github.com/
Bug-reports:         https://github.com/
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) 2012 The University of Kansas
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A transport level remove JavaScript RESTful push mechanism.

Extra-source-files:
    README
    examples/basic.hs
    examples/urlshortener.hs
    examples/json.hs
    examples/static/jquery.js
    examples/static/jquery-json.js
    examples/static/json.js

Library
  Exposed-modules:     Web.Tractor
  default-language:    Haskell2010
  build-depends:       aeson            >= 0.5,
                       base             >= 4.3.1 && < 5,
                       language-javascript,
                       scotty           == 0.4.*,
                       stm              == 2.2.*

  GHC-options: -Wall -fno-warn-orphans

--source-repository head
--  type:     git
--  location: git://github.com/xich/scotty.git
